# claude-deepseek-monitor

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md
.scratch/claude-deepseek-monitor/: spec.md
.scratch/claude-deepseek-monitor/issues/: 01-poll-cycle-core-logic.md  02-app-shell-widget-tray.md  03-live-claude-usage-pacing.md  04-deepseek-peak-indicator-notifications.md  05-settings-panel-autolaunch.md
docs/adr/: 0009-poll-codex-with-short-lived-app-server.md  0010-adaptive-source-local-widget.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: gen_icon.py
src-tauri/src/: lib.rs  main.rs  poll_cycle.rs  test_debug.rs
