[package]
name = "claude-deepseek-monitor"
version = "0.1.1"
description = "Claude Code / DeepSeek Compact Usage Overlay"
edition = "2021"

[lib]
name = "claude_deepseek_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
